tests/ui/invalid-contract-harness/expected
error: only one '#[kani::proof_for_contract]' attribute is allowed per harness\
invalid.rs:\
|\
| #[kani::proof_for_contract(foo)]\
| ^^^^^^^^^^^^^^

error: functions used as harnesses cannot have any arguments\
invalid.rs:\
|\
| #[kani::proof_for_contract(foo)]
| ^^^^^^^^^^^^^^

error: the '#[kani::proof_for_contract]' attribute cannot be applied to generic functions\
invalid.rs:\
|\
| #[kani::proof_for_contract(foo)]\
| ^^^^^^^^^^^^^^
